--- a/src/app/cameras/cameras.component.html
+++ b/src/app/cameras/cameras.component.html
@@ -1,1 +1,1 @@
-<ag-grid-angular #cameraGrid style="width: 100%; height: 500px;" class="ag-theme-alpine" [columnDefs]="columnDefs" [rowData]="cameras"></ag-grid-angular>
+<ag-grid-angular #cameraGrid style="width: 100%; height: 500px;" class="ag-theme-alpine" [columnDefs]="columnDefs" [rowData]="cameras" rowSelection="single"></ag-grid-angular>
