Button checks everywhere! except reassign.

--- a/src/app/new-assignment/new-assignment.component.html
+++ b/src/app/new-assignment/new-assignment.component.html
@@ -2,6 +2,6 @@
 <p>
   Select a vehicle to assign the camera to then select the camera to assign.
 </p>
-<app-vehicles></app-vehicles>
-<app-cameras></app-cameras>
-<button type="button" (click)="createAssignment()">Create</button>
+<app-vehicles (rowClick)="onRowsSelected()"></app-vehicles>
+<app-cameras (rowClick)="onRowsSelected()"></app-cameras>
+<button type="button" [disabled]="!rowsSelected" (click)="createAssignment()">Create</button>
