--- a/src/app/reassignment/reassignment.component.html
+++ b/src/app/reassignment/reassignment.component.html
@@ -2,6 +2,6 @@
 <p>
   Please select a camera to reassign it to the vehicle or select a vehicle to reassign it to the camera.
 </p>
-<app-vehicles></app-vehicles>
-<app-cameras></app-cameras>
-<button type="button" (click)="updateAssignment()">Reassign</button>
+<app-vehicles (rowClick)="onRowsSelected()"></app-vehicles>
+<app-cameras (rowClick)="onRowsSelected()"></app-cameras> <!-- [hidden]="!vehiclesComponent.rowSelected" -->
+<button type="button" [disabled]="!rowSelected" (click)="updateAssignment()">Reassign</button>
