--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,25 @@
-<h1>Camera to Vehicle Assignments?</h1>
-<app-assignments (buttonClick)="setModal($event)"></app-assignments>
-<div *ngIf="showModal('new')"> <!-- show on New Assignment press -->
-  <app-new-assignment (created)="assignmentListRefresh()"></app-new-assignment>
+<div *ngIf="showModal('new') || showModal('reassign')" class="modal-mask"></div>
+<div *ngIf="showModal('new') || showModal('reassign')" class="modal-wrapper">
+  <!-- show on New Assignment press -->
+  <div *ngIf="showModal('new')">
+    <app-new-assignment (created)="assignmentListRefresh()" class="modal-content"></app-new-assignment>
+  </div>
+  <!-- show on Reassign press -->
+  <div *ngIf="showModal('reassign')">
+    <app-reassignment (updated)="assignmentListRefresh()" class="modal-content"></app-reassignment>
+  </div>
 </div>
-<div *ngIf="showModal('reassign')"> <!-- show on Reassign press -->
-  <app-reassignment (updated)="assignmentListRefresh()"></app-reassignment>
+<div class="content-wrapper">
+  <div class="main-topper">
+    <div>
+      <h1>Manage Vehicle Camera Assignments</h1>
+      <p>
+        Select a vehicle camera assignment from the grid to reassign or delete.
+      </p>
+    </div>
+<div class="new-assignment-button-container">
+  <button type="button" (click)="assignmentsComponent.addAssignment()">New</button>
+</div>
+  </div>
+  <app-assignments class="content-body" (buttonClick)="setModal($event)"></app-assignments>
 </div>
