--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -1,1 +1,1 @@
-<ag-grid-angular #vehicleGrid style="width: 100%; height: 500px;" class="ag-theme-alpine" [columnDefs]="columnDefs" [rowData]="vehicles" rowSelection="single" (rowSelected)="rowSelect()"></ag-grid-angular>
+<ag-grid-angular #vehicleGrid class="ag-theme-alpine grid" [columnDefs]="columnDefs" [rowData]="vehicles" rowSelection="single" (rowSelected)="rowSelect()"></ag-grid-angular>
