--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,112 @@
 //Import styles for ag-Grid
 @import "../node_modules/ag-grid-community/src/styles/ag-grid.scss";
 @import "../node_modules/ag-grid-community/src/styles/ag-theme-alpine/sass/ag-theme-alpine-mixin.scss";
-
+@import "./src/app/variables";
 .ag-theme-alpine {
-    @include ag-theme-alpine();
+  @include ag-theme-alpine();
+}
+
+//Global Styles
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+//Global Modal styles
+.modal-wrapper {
+  position: absolute;
+  top: 8em;
+  left: 4em;
+  right: 4em;
+  bottom: 8em;
+  display: flex;
+  justify-content: center;
+  background: $modal-background;
+  margin: 0 auto;
+  padding-bottom: 1.2em;
+  z-index: 10;
+  div {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+  }
+  .modal-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    .modal-topper {
+      flex-direction: column;
+      background-color: $modal-topper-background;
+      margin-bottom: 1.2em;
+      padding: 1em;
+      width: auto;
+      h2 {
+        margin: 0 0 .5em;
+      }
+    }
+    .modal-body {
+      display: flex;
+      flex-flow: row nowrap;
+      flex: 1;
+      .grid {
+        display: flex;
+        flex: 1;
+        height: 95%;
+        margin: 0 1em 1em;
+        &:first-of-type {
+          margin: 0 1em 0 0;
+        }
+        &:last-of-type {
+          margin-left: 0 0 1em 0;
+        }
+      }
+    }
+
+    .modal-button-footer {
+      display: flex;
+      flex-direction: row;
+      button {
+        background-color: $button-color-secondary;
+        border: 0;
+        border-radius: 2em;
+        color: $button-text-color-secondary;
+        font-size: .8em;
+        margin-right: .8em;
+        padding: .3em .8em;
+        &:last-of-type{
+          margin-right: 0;
+        }
+        &:disabled {
+          cursor: not-allowed;
+          background-color: $button-disabled-color;
+          color: $button-disabled-text-color;
+        }
+      }
+    }
+  }
+}
+
+.modal-mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background: $mask-color;
+  z-index: 1;
+}
+
+.content-body .grid {
+  display: flex;
+  flex: 1;
+  margin: 0 1em 1em;
+  width: 90%;
+  .ag-root-wrapper {
+    flex: 1;
+  }
 }
