--- a/src/app/new-assignment/new-assignment.component.html
+++ b/src/app/new-assignment/new-assignment.component.html
@@ -1,7 +1,7 @@
 <div class="modal-topper">
 <h2>Create a New Assignment</h2>
 <p>
-  Select a vehicle to assign the camera to then select the camera to assign.
+  Select the vehicle you'd like to assign a camera to and then select the camera to assign.
 </p>
 </div>
 <div class="modal-body">
