95% working assignment error proofing. Mystery bug with camera and clear.

--- a/src/app/reassignment/reassignment.component.html
+++ b/src/app/reassignment/reassignment.component.html
@@ -10,5 +10,6 @@
 </div>
 <div class="modal-button-footer">
 <button type="button" [disabled]="!rowSelected" (click)="updateAssignment()">Reassign</button>
+<button type="button" [disabled]="!rowSelected" (click)="clearSelection()">Clear</button>
 <button type="button" (click)="closeModal()">Cancel</button>
 </div>
